<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VentanaTarea5">



    <TextView
        android:id="@+id/textViewA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_a"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/numeroA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/textViewA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/textViewB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_b"
        app:layout_constraintTop_toBottomOf="@id/numeroA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/numeroB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/textViewB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        app:layout_constraintTop_toBottomOf="@id/numeroB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/resultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:focusable="false"
        android:background="#E0E0E0"
        app:layout_constraintTop_toBottomOf="@id/textViewResultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"/>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/resultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <RadioButton android:id="@+id/suma" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sum"/>
        <RadioButton android:id="@+id/resta" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/subtract"/>
        <RadioButton android:id="@+id/multiplicacion" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/multiply"/>
        <RadioButton android:id="@+id/division" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/divide"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/radioGroup1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp">

        <RadioButton android:id="@+id/raizA" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sqrt_a"/>
        <RadioButton android:id="@+id/raizB" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sqrt_b"/>
        <RadioButton android:id="@+id/logA" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/log_a"/>
        <RadioButton android:id="@+id/logB" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/log_b"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/radioGroup2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp">

        <RadioButton android:id="@+id/mayor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/greater"/>
        <RadioButton android:id="@+id/menor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lesser"/>
        <RadioButton android:id="@+id/divisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/modulus"/>
        <RadioButton android:id="@+id/potencia" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/power"/>
    </RadioGroup>

    <Button
        android:id="@+id/btncCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="40dp"
        android:text="@string/calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />


</androidx.constraintlayout.widget.ConstraintLayout>